--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-hacker
 title: Welcome to Marlene's Homepage!
-description: This is my GitHub account for the term 20EW4 :rose:
+description: This is my GitHub account for the term 20EW4 🌟
