--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,7 @@
 theme: jekyll-theme-hacker
 
+# Name of website
+title: My website
+
+# Short description of your site
+description: A virtual proof that I'm awesome
