--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-hacker
 
 # Name of website
-title: My website
+title: Welcome To My Website
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: my virtual ePortfolio that displays my skills :smile:
