--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,10 @@ title: Welcome To My Website
 
 # Short description of your site
 description: my virtual ePortfolio that displays my skills :smile:
+
+# Character used to separate site title and description in HTML document title
+# and RSS feed title
+title-separator: "-"
+
+# Ruby Date Format
+date_format: "%B %-d, %Y"
