--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,14 @@ theme: jekyll-theme-hacker
 
 # Name of website
 # title: Welcome To My Website
-title: false 
+#title: false 
 
 # Short description of your site
 description: my virtual ePortfolio that displays my skills :smile:
 
 # Character used to separate site title and description in HTML document title
 # and RSS feed title
-title-separator: "-"
+#title-separator: "-"
 
 # Ruby Date Format
 #date_format: "%B %-d, %Y"
