--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ theme: jekyll-theme-hacker
 #title: false 
 
 # Short description of your site
-description: my virtual ePortfolio that displays my skills :smile:
+#description: my virtual ePortfolio that displays my skills :smile:
 
 # Character used to separate site title and description in HTML document title
 # and RSS feed title
