--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: jekyll-theme-hacker
 
 # Name of website
 # title: Welcome To My Website
-#title: false 
+title: false 
 
 # Short description of your site
 #description: my virtual ePortfolio that displays my skills :smile:
