--- a/_config.yml
+++ b/_config.yml
@@ -12,13 +12,13 @@ description: ePortfolio
 #title-separator: "-"
 
 # Ruby Date Format
-date_format: "%B %-d, %Y"
+#date_format: "%B %-d, %Y"
 
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
-navbar-col: "#F5F5F5"
-navbar-text-col: "#404040"
-navbar-children-col: "#F5F5F5"
+#navbar-col: "#F5F5F5"
+#navbar-text-col: "#404040"
+#navbar-children-col: "#F5F5F5"
 #page-col: "#FFFFFF"
 #link-col: "#008AFF"
 #hover-col: "#0085A1"
